# autopublisher

./: .gitignore  README.md  evolution_saas.md  start_all.sh
bloc-1-backend/: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
bloc-1-backend/app/: config.py  db.py  main.py  migrations.py  models.py  schemas.py
bloc-1-backend/app/api/: account_routes.py  debug_routes.py  health_routes.py  persona_routes.py  planning_routes.py  positioning_routes.py  post_routes.py  selector_routes.py  session_routes.py  stats_routes.py  task_routes.py
bloc-1-backend/app/services/: account_service.py  persona_service.py  planning_service.py  post_service.py  session_service.py
bloc-1-backend/data/: saas_rse.db.bak-20260704-133615
bloc-1-backend/tests/: conftest.py  test_account_crud.py  test_health.py  test_migrations.py  test_persona_crud.py  test_planning_crud.py  test_post_crud.py  test_session_routes.py  test_task_routes.py
bloc-2-grillme/: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
bloc-2-grillme/app/: config.py  db.py  main.py  models.py  schemas.py
bloc-2-grillme/tests/: conftest.py  test_grillme_e2e.py  test_interrogator_agent.py  test_strategist_agent.py
bloc-3-generation/: .env.example  README.md  SPEC.md  pyproject.toml
bloc-4-carrousels/: README.md  SPEC.md  api_server.py  pyproject.toml
bloc-4-carrousels/app/: main.py  schemas.py
bloc-4-carrousels/app/services/: carousel_service.py  template_engine.py
bloc-4-carrousels/app/templates/: bold.html  instagram.html  minimal.html  modern.html  organic.html
bloc-4-carrousels/tests/: test_carousel_service.py  test_template_engine.py
bloc-4-carrousels/tests/fixtures/: sample_spec.json
bloc-5-extension/: README.md  SPEC.md  build.mjs  manifest.json  package-lock.json  package.json
bloc-6-dashboard/: README.md  SPEC.md  package-lock.json  package.json  tsconfig.json
bloc-7-resilience/: .env.example  README.md  SPEC.md  pyproject.toml
bloc-7-resilience/app/: config.py  db.py  main.py  models.py
bloc-7-resilience/app/api/: queue_routes.py
bloc-7-resilience/app/services/: queue_service.py  retry_policy.py  telegram_notifier.py
bloc-7-resilience/app/workers/: queue_worker.py  task_handlers.py
bloc-7-resilience/data/: test_resilience.db
bloc-7-resilience/saas_rse_resilience.egg-info/: SOURCES.txt  requires.txt
bloc-7-resilience/tests/: conftest.py  test_queue_service.py  test_queue_worker_e2e.py  test_retry_policy.py  test_telegram_notifier.py
bloc-8-integration/: README.md  RECETTE.md  SPEC.md  pyproject.toml
bloc-8-integration/scripts/: reset_db.sh  run_recette.sh
bloc-8-integration/tests/: conftest.py
bloc-8-integration/tests/e2e/: test_extension_callback.py  test_grillme_to_persona.py  test_health_all_blocs.py  test_image_generation.py  test_persona_to_post.py  test_post_crud_chain.py  test_post_to_queue.py
bloc-8-integration/tests/fixtures/: sample_persona.json  sample_post.json
bloc-9-publisher/: README.md  cookies.py  ig_publisher.py  li_unipile.py  linkedin.py  requirements.txt  run_once.py  start.sh  test_pw_auth.py  worker.py
(+70 files in other folders)
